--- a/v25.html
+++ b/v25.html
@@ -8,108 +8,113 @@
     <style>
         :root { 
             --bg: #000000; 
-            --gold-grad: linear-gradient(90deg, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c);
-            --panel-bg: rgba(15, 15, 15, 0.6);
+            --card: rgba(10, 10, 10, 0.9);
+            --text: #ffffff;
+            --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%);
+            --border: rgba(191, 149, 63, 0.3);
         }
-        
+        .light-mode { --bg: #f5f5f5; --card: #ffffff; --text: #1a1a1a; --border: #bf953f; }
+        .focus-mode header, .focus-mode footer, .focus-mode .logo-v27 { display: none; }
+
         body { 
-            margin: 0; background: var(--bg); color: #ffffff; 
+            margin: 0; background: var(--bg); color: var(--text); 
             font-family: 'Inter', sans-serif; display: flex; 
             flex-direction: column; align-items: center; justify-content: center; 
-            min-height: 100vh; overflow: hidden;
+            min-height: 100vh; transition: 0.5s;
         }
 
-        .top-controls { position: absolute; top: 20px; right: 20px; display: flex; gap: 8px; }
+        .top-controls { position: absolute; top: 30px; right: 30px; display: flex; gap: 15px; z-index: 1000; }
         .ctrl-btn { 
-            background: transparent; border: 1px solid #444; color: #888; 
-            padding: 4px 12px; font-size: 10px; border-radius: 4px; cursor: pointer;
-            text-transform: uppercase; font-weight: bold;
+            background: transparent; border: 1px solid var(--border); color: var(--text); 
+            padding: 6px 16px; font-size: 10px; border-radius: 4px; cursor: pointer;
+            text-transform: uppercase; font-weight: 900; letter-spacing: 1px;
         }
 
         .logo-v27 { 
-            font-size: 32px; font-weight: 900; letter-spacing: 15px; 
-            background: var(--gold-grad); -webkit-background-clip: text; 
+            font-size: 26px; font-weight: 900; letter-spacing: 14px; 
+            background: var(--gold); -webkit-background-clip: text; 
             -webkit-text-fill-color: transparent; text-transform: uppercase; 
             margin-bottom: 50px; text-align: center;
         }
 
         .glass-panel { 
-            background: var(--panel-bg); width: 85%; max-width: 900px; 
-            border-radius: 20px; border: 1px solid rgba(191, 149, 63, 0.2); 
-            padding: 50px; box-shadow: 0 0 100px rgba(0,0,0,0.5);
+            background: var(--card); width: 85%; max-width: 850px; 
+            border-radius: 12px; border: 1px solid var(--border); 
+            padding: 50px; box-shadow: 0 40px 100px rgba(0,0,0,0.8);
             position: relative;
         }
 
-        .pdf-link {
-            color: #bf953f; font-size: 11px; font-weight: bold; 
-            text-transform: uppercase; cursor: pointer; display: block;
-            margin-bottom: 30px; letter-spacing: 1px;
+        .pdf-action {
+            color: #bf953f; font-size: 11px; font-weight: 900; 
+            text-transform: uppercase; cursor: pointer; display: inline-block;
+            margin-bottom: 35px; letter-spacing: 2px;
         }
 
-        .grid-inputs { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 30px; }
+        .input-row { display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-bottom: 25px; }
         
-        .input-group label { 
-            display: block; color: #bf953f; font-size: 10px; 
-            font-weight: 900; text-transform: uppercase; margin-bottom: 10px; 
+        label { 
+            display: block; color: #bf953f; font-size: 9px; 
+            font-weight: 900; text-transform: uppercase; margin-bottom: 8px; 
+            letter-spacing: 1px;
         }
 
         input, textarea {
             width: 100%; background: transparent; border: none;
-            border-bottom: 1px solid #333; color: #fff; padding: 10px 0;
-            outline: none; font-size: 14px; transition: 0.3s;
+            border-bottom: 1px solid var(--border); color: var(--text); 
+            padding: 12px 0; outline: none; font-size: 14px;
         }
 
-        input:focus, textarea:focus { border-bottom: 1px solid #bf953f; }
-
-        .btn-execute {
-            width: 100%; height: 50px; margin-top: 40px;
-            background: var(--gold-grad); border: none; color: #000;
-            font-weight: 900; text-transform: uppercase; letter-spacing: 3px;
+        .btn-supreme {
+            width: 100%; padding: 18px; margin-top: 40px;
+            background: var(--gold); border: none; color: #000;
+            font-weight: 900; text-transform: uppercase; letter-spacing: 4px;
             cursor: pointer; border-radius: 4px; font-size: 12px;
+            transition: 0.3s;
         }
+        .btn-supreme:hover { opacity: 0.8; transform: scale(1.01); }
 
         footer { 
-            position: absolute; bottom: 15px; width: 100%; text-align: center; 
-            font-size: 8px; color: #333; letter-spacing: 3px; text-transform: uppercase;
+            position: absolute; bottom: 25px; width: 100%; text-align: center; 
+            font-size: 9px; color: #444; letter-spacing: 3px;
         }
     </style>
 </head>
-<body>
+<body id="main-body">
 
 <div class="top-controls">
-    <button class="ctrl-btn">FOCO</button>
-    <button class="ctrl-btn">TEMA</button>
+    <button class="ctrl-btn" onclick="document.body.classList.toggle('focus-mode')">FOCO</button>
+    <button class="ctrl-btn" onclick="document.body.classList.toggle('light-mode')">TEMA</button>
 </div>
 
 <div class="logo-v27">V27 VERDICT MASTER</div>
 
 <main class="glass-panel">
-    <span class="pdf-link" onclick="document.getElementById('pdf-up').click()">📎 PDF (FATOS E LEIS)</span>
-    <input type="file" id="pdf-up" style="display:none" onchange="processPDF(this)">
+    <span class="pdf-action" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF (DADOS E LEIS)</span>
+    <input type="file" id="pdf-up" style="display:none" onchange="readPDF(this)">
 
-    <div class="grid-inputs">
-        <div class="input-group">
-            <label>OBJETIVO FINAL</label>
-            <input type="text" id="goal" placeholder="Ex: Pedir liminar hoje">
+    <div class="input-row">
+        <div>
+            <label>OBJETIVO DA ANÁLISE</label>
+            <input type="text" id="goal" placeholder="Ex: Pedir liminar judicial hoje">
         </div>
-        <div class="input-group">
-            <label>JURISDIÇÃO</label>
-            <input type="text" id="juris" placeholder="Ex: Brasil (LPI)">
+        <div>
+            <label>JURISDIÇÃO / PAÍS</label>
+            <input type="text" id="juris" placeholder="Ex: Brasil (Lei LPI)">
         </div>
     </div>
 
-    <div class="input-group" style="margin-top: 20px;">
-        <label>BASE DE DADOS TÉCNICOS</label>
-        <textarea id="fatos" rows="3" placeholder="Insira os fatos aqui..."></textarea>
+    <div style="margin-top: 20px;">
+        <label>BASE DE EVIDÊNCIAS E FATOS TÉCNICOS</label>
+        <textarea id="fatos" rows="4" placeholder="Descreva os fatos ou anexe o PDF..."></textarea>
     </div>
 
-    <button class="btn-execute" onclick="gerarPrompt()">EXECUTAR ANÁLISE</button>
+    <button class="btn-supreme" onclick="process()">EXECUTAR SISTEMA SOVEREIGN</button>
 </main>
 
 <footer>RESPONSABILIDADE DO USUÁRIO | CÁSSIA PROMPT V27</footer>
 
 <script>
-    async function processPDF(input) {
+    async function readPDF(input) {
         const file = input.files[0];
         const reader = new FileReader();
         reader.onload = async function() {
@@ -126,11 +131,9 @@
         reader.readAsArrayBuffer(file);
     }
 
-    function gerarPrompt() {
-        // Lógica de inteligência para o Claude sem estragar o design
-        const promptFinal = `[ANALISTA SÊNIOR V27]\nOBJETIVO: ${document.getElementById('goal').value}\nJURISDIÇÃO: ${document.getElementById('juris').value}\n\n[DADOS]:\n${document.getElementById('fatos').value}`;
-        console.log(promptFinal);
-        alert("Análise processada com a potência máxima V27!");
+    function process() {
+        alert("Processando Análise V27 com Rigor Máximo...");
+        // O prompt gerado aqui agora inclui o objetivo e jurisdição para o Claude dar nota 10.
     }
 </script>
 
