--- a/v25.html
+++ b/v25.html
@@ -3,137 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V27 VERDICT MASTER | CÁSSIA PROMPT</title>
+    <title>V27 VERDICT MASTER</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
         :root { 
             --bg: #000000; 
-            --card: rgba(10, 10, 10, 0.9);
             --text: #ffffff;
-            --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%);
-            --border: rgba(191, 149, 63, 0.3);
+            --gold: #bf953f;
+            --gold-grad: linear-gradient(90deg, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c);
         }
-        .light-mode { --bg: #f5f5f5; --card: #ffffff; --text: #1a1a1a; --border: #bf953f; }
-        .focus-mode header, .focus-mode footer, .focus-mode .logo-v27 { display: none; }
+        
+        .light-mode { --bg: #ffffff; --text: #000000; }
+        .focus-mode .logo, .focus-mode footer, .focus-mode .top-buttons { display: none !important; }
 
         body { 
-            margin: 0; background: var(--bg); color: var(--text); 
-            font-family: 'Inter', sans-serif; display: flex; 
-            flex-direction: column; align-items: center; justify-content: center; 
-            min-height: 100vh; transition: 0.5s;
+            margin: 0; background-color: var(--bg); color: var(--text); 
+            font-family: 'Inter', sans-serif; display: flex; flex-direction: column;
+            align-items: center; justify-content: center; min-height: 100vh;
+            transition: 0.3s ease;
         }
 
-        .top-controls { position: absolute; top: 30px; right: 30px; display: flex; gap: 15px; z-index: 1000; }
-        .ctrl-btn { 
-            background: transparent; border: 1px solid var(--border); color: var(--text); 
-            padding: 6px 16px; font-size: 10px; border-radius: 4px; cursor: pointer;
-            text-transform: uppercase; font-weight: 900; letter-spacing: 1px;
+        .top-buttons { position: absolute; top: 30px; right: 30px; display: flex; gap: 10px; }
+        .btn-ctrl { 
+            background: transparent; border: 1px solid #333; color: var(--text); 
+            padding: 5px 15px; font-size: 10px; border-radius: 3px; cursor: pointer;
+            font-weight: bold; text-transform: uppercase;
         }
 
-        .logo-v27 { 
-            font-size: 26px; font-weight: 900; letter-spacing: 14px; 
-            background: var(--gold); -webkit-background-clip: text; 
+        .logo { 
+            font-size: 32px; font-weight: 900; letter-spacing: 12px; 
+            background: var(--gold-grad); -webkit-background-clip: text; 
             -webkit-text-fill-color: transparent; text-transform: uppercase; 
-            margin-bottom: 50px; text-align: center;
+            margin-bottom: 60px; text-align: center;
         }
 
-        .glass-panel { 
-            background: var(--card); width: 85%; max-width: 850px; 
-            border-radius: 12px; border: 1px solid var(--border); 
-            padding: 50px; box-shadow: 0 40px 100px rgba(0,0,0,0.8);
-            position: relative;
+        .main-card { 
+            background: rgba(15, 15, 15, 0.4); width: 85%; max-width: 900px; 
+            border-radius: 15px; border: 1px solid rgba(191, 149, 63, 0.15); 
+            padding: 50px; position: relative;
         }
 
-        .pdf-action {
-            color: #bf953f; font-size: 11px; font-weight: 900; 
-            text-transform: uppercase; cursor: pointer; display: inline-block;
-            margin-bottom: 35px; letter-spacing: 2px;
+        .pdf-trigger {
+            color: var(--gold); font-size: 10px; font-weight: 900; 
+            text-transform: uppercase; cursor: pointer; display: block;
+            margin-bottom: 30px; letter-spacing: 1.5px;
         }
 
-        .input-row { display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-bottom: 25px; }
+        .row { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 25px; }
         
-        label { 
-            display: block; color: #bf953f; font-size: 9px; 
-            font-weight: 900; text-transform: uppercase; margin-bottom: 8px; 
-            letter-spacing: 1px;
+        .field label { 
+            display: block; color: var(--gold); font-size: 9px; 
+            font-weight: 900; text-transform: uppercase; margin-bottom: 10px; 
         }
 
         input, textarea {
             width: 100%; background: transparent; border: none;
-            border-bottom: 1px solid var(--border); color: var(--text); 
-            padding: 12px 0; outline: none; font-size: 14px;
+            border-bottom: 1px solid #222; color: #fff; padding: 10px 0;
+            outline: none; font-size: 14px;
         }
 
-        .btn-supreme {
-            width: 100%; padding: 18px; margin-top: 40px;
-            background: var(--gold); border: none; color: #000;
-            font-weight: 900; text-transform: uppercase; letter-spacing: 4px;
-            cursor: pointer; border-radius: 4px; font-size: 12px;
-            transition: 0.3s;
+        .btn-exec {
+            width: 100%; height: 55px; margin-top: 50px;
+            background: var(--gold-grad); border: none; color: #000;
+            font-weight: 900; text-transform: uppercase; letter-spacing: 3px;
+            cursor: pointer; border-radius: 4px; font-size: 11px;
         }
-        .btn-supreme:hover { opacity: 0.8; transform: scale(1.01); }
 
         footer { 
-            position: absolute; bottom: 25px; width: 100%; text-align: center; 
-            font-size: 9px; color: #444; letter-spacing: 3px;
+            position: absolute; bottom: 20px; width: 100%; text-align: center; 
+            font-size: 8px; color: #222; letter-spacing: 3px; text-transform: uppercase;
         }
     </style>
 </head>
-<body id="main-body">
+<body id="body">
 
-<div class="top-controls">
-    <button class="ctrl-btn" onclick="document.body.classList.toggle('focus-mode')">FOCO</button>
-    <button class="ctrl-btn" onclick="document.body.classList.toggle('light-mode')">TEMA</button>
+<div class="top-buttons">
+    <button class="btn-ctrl" onclick="document.getElementById('body').classList.toggle('focus-mode')">FOCO</button>
+    <button class="btn-ctrl" onclick="document.getElementById('body').classList.toggle('light-mode')">TEMA</button>
 </div>
 
-<div class="logo-v27">V27 VERDICT MASTER</div>
+<div class="logo">V27 VERDICT MASTER</div>
 
-<main class="glass-panel">
-    <span class="pdf-action" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF (DADOS E LEIS)</span>
-    <input type="file" id="pdf-up" style="display:none" onchange="readPDF(this)">
+<main class="main-card">
+    <span class="pdf-trigger" onclick="document.getElementById('pdf-in').click()">📎 IMPORTAR PDF (DADOS E LEIS)</span>
+    <input type="file" id="pdf-in" style="display:none" onchange="handlePDF(this)">
 
-    <div class="input-row">
-        <div>
+    <div class="row">
+        <div class="field">
             <label>OBJETIVO DA ANÁLISE</label>
             <input type="text" id="goal" placeholder="Ex: Pedir liminar judicial hoje">
         </div>
-        <div>
+        <div class="field">
             <label>JURISDIÇÃO / PAÍS</label>
             <input type="text" id="juris" placeholder="Ex: Brasil (Lei LPI)">
         </div>
     </div>
 
-    <div style="margin-top: 20px;">
+    <div class="field" style="margin-top: 15px;">
         <label>BASE DE EVIDÊNCIAS E FATOS TÉCNICOS</label>
-        <textarea id="fatos" rows="4" placeholder="Descreva os fatos ou anexe o PDF..."></textarea>
+        <textarea id="fatos" rows="3" placeholder="Descreva os fatos ou anexe o PDF..."></textarea>
     </div>
 
-    <button class="btn-supreme" onclick="process()">EXECUTAR SISTEMA SOVEREIGN</button>
+    <button class="btn-exec" onclick="alert('Análise Iniciada...')">EXECUTAR SISTEMA SOVEREIGN</button>
 </main>
 
 <footer>RESPONSABILIDADE DO USUÁRIO | CÁSSIA PROMPT V27</footer>
 
 <script>
-    async function readPDF(input) {
-        const file = input.files[0];
+    async function handlePDF(e) {
+        const file = e.files[0];
         const reader = new FileReader();
         reader.onload = async function() {
-            const typedarray = new Uint8Array(this.result);
-            const pdf = await pdfjsLib.getDocument(typedarray).promise;
-            let text = "";
+            const arr = new Uint8Array(this.result);
+            const pdf = await pdfjsLib.getDocument(arr).promise;
+            let content = "";
             for (let i = 1; i <= pdf.numPages; i++) {
                 const page = await pdf.getPage(i);
-                const content = await page.getTextContent();
-                text += content.items.map(s => s.str).join(" ") + "\n";
+                const text = await page.getTextContent();
+                content += text.items.map(s => s.str).join(" ") + "\n";
             }
-            document.getElementById('fatos').value = text;
+            document.getElementById('fatos').value = content;
         };
         reader.readAsArrayBuffer(file);
-    }
-
-    function process() {
-        alert("Processando Análise V27 com Rigor Máximo...");
-        // O prompt gerado aqui agora inclui o objetivo e jurisdição para o Claude dar nota 10.
     }
 </script>
 
