--- a/cass/admin.html
+++ b/cass/admin.html
@@ -2,63 +2,114 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel Admin - Cássia Prompt</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>GESTOR V9 ELITE</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;900&display=swap');
-        :root { --bg-body: #0f172a; --text-main: #e2e8f0; --glass-bg: rgba(255, 255, 255, 0.03); }
-        body.light-mode { --bg-body: #f1f5f9; --text-main: #1e293b; --glass-bg: rgba(255, 255, 255, 0.8); }
-        body { font-family: 'Outfit', sans-serif; background: var(--bg-body); color: var(--text-main); transition: background 0.3s ease; }
-        .glass { background: var(--glass-bg); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); }
-        .theme-btn { position: fixed; top: 20px; right: 20px; z-index: 100; padding: 10px; border-radius: 50px; background: #ec4899; color: white; font-size: 10px; font-weight: bold; cursor: pointer; border: none; }
+        body { background: #000; color: #fff; font-family: sans-serif; text-align: center; padding: 20px; }
+        .card { border: 2px solid #ed0b5a; padding: 30px; border-radius: 20px; max-width: 500px; margin: auto; box-shadow: 0 0 20px rgba(237,11,90,0.2); }
+        h1 { text-transform: uppercase; color: #ed0b5a; letter-spacing: 2px; }
+        input { width: 90%; padding: 15px; margin: 15px 0; background: #111; border: 1px solid #333; color: #fff; border-radius: 10px; font-size: 15px; }
+        .btn-gerar { background: #ed0b5a; color: #fff; border: none; padding: 15px; width: 95%; border-radius: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; font-size: 14px; }
+        .item { background: #111; padding: 15px; border-radius: 10px; margin-top: 15px; border: 1px solid #222; text-align: left; }
+        .item-nome { font-weight: 800; font-size: 13px; letter-spacing: 1px; color: #fff; }
+        .item-id { font-size: 10px; color: #555; margin-top: 3px; }
+        .btn-copiar { background: #007bff; color: #fff; border: none; padding: 10px; width: 100%; border-radius: 5px; cursor: pointer; margin-top: 10px; font-weight: bold; font-size: 12px; }
+        .btn-revogar { background: none; border: 1px solid #ff4d4d; color: #ff4d4d; padding: 5px 12px; cursor: pointer; border-radius: 5px; float: right; font-size: 10px; font-weight: bold; }
+        .status-ok { display: inline-block; background: rgba(82,196,82,0.15); color: #52c452; border: 1px solid #52c452; border-radius: 4px; font-size: 9px; padding: 2px 8px; margin-left: 8px; font-weight: 800; letter-spacing: 1px; }
+        .status-fixo { display: inline-block; background: rgba(191,149,63,0.15); color: #bf953f; border: 1px solid #bf953f; border-radius: 4px; font-size: 9px; padding: 2px 8px; margin-left: 8px; font-weight: 800; letter-spacing: 1px; }
+        .total { font-size: 11px; color: #555; margin-top: 20px; letter-spacing: 1px; }
+        footer { margin-top: 40px; font-size: 10px; color: #666; }
+        #msg { font-size: 12px; color: #52c452; height: 20px; margin-top: 8px; font-weight: bold; letter-spacing: 1px; }
     </style>
 </head>
-<body class="p-6">
-    <button class="theme-btn" onclick="toggleTheme()">MUDAR TEMA</button>
-    <div class="max-w-md mx-auto mt-10">
-        <header class="text-center mb-10">
-            <h1 class="text-3xl font-black text-pink-500 uppercase italic">Painel de Controlo</h1>
-            <p class="text-slate-500 text-xs font-bold uppercase tracking-widest">Administração Cássia Prompt</p>
-        </header>
-        <div class="glass p-8 rounded-[2.5rem] shadow-2xl border border-pink-500/20 space-y-6">
-            <div>
-                <h2 class="text-sm font-black text-slate-400 uppercase mb-4">Link de Acesso dos Clientes</h2>
-                <div class="bg-slate-900/50 p-4 rounded-2xl border border-slate-700">
-                    <p class="text-[10px] text-pink-400 font-mono break-all" id="linkOficial">
-                        https://cassiakelly995-lab.github.io/meu-app/cass/cassia-app.html?token=access-cassia-2026
-                    </p>
-                </div>
-                <button onclick="copiarLink()" class="w-full mt-4 bg-pink-600 hover:bg-pink-700 p-4 rounded-xl font-black uppercase text-xs transition-all shadow-lg text-white">
-                    📋 Copiar Link Oficial
-                </button>
-            </div>
-            <hr class="border-slate-800">
-            <div class="space-y-3">
-                <h2 class="text-sm font-black text-slate-400 uppercase">Estado do Sistema</h2>
-                <div class="flex items-center gap-3">
-                    <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></div>
-                    <p class="text-sm font-bold text-green-500">Servidor Online & Seguro</p>
-                </div>
-                <p class="text-[11px] text-slate-500">O token atual é fixo para garantir estabilidade máxima.</p>
-            </div>
-        </div>
-        <footer class="mt-12 pt-6 border-t border-slate-800 text-center">
-            <p class="text-[9px] text-slate-500 leading-relaxed uppercase tracking-tighter">
-                CONTEÚDO GERADO POR IA. A CONFERÊNCIA TÉCNICA E JURÍDICA É OBRIGATÓRIA.
-            </p>
-        </footer>
-    </div>
-    <script>
-        if (localStorage.getItem('theme') === 'light') document.body.classList.add('light-mode');
-        function toggleTheme() {
-            document.body.classList.toggle('light-mode');
-            localStorage.setItem('theme', document.body.classList.contains('light-mode') ? 'light' : 'dark');
+<body>
+<div class="card">
+    <h1>Gestor <span style="color:#fff">V9 Elite</span></h1>
+    <input type="text" id="nomeDoutora" placeholder="NOME DA PESSOA">
+    <button class="btn-gerar" onclick="gerarAcesso()">GERAR LINK E AUTORIZAR</button>
+    <div id="msg"></div>
+    <div id="listaAcessos"></div>
+    <div class="total" id="total"></div>
+    <footer>
+        <strong style="color:#bf953f">LICENCIADO PARA: CÁSSIA PROMPT</strong><br><br>
+        A RESPONSABILIDADE É DE QUEM ESTÁ USANDO.<br>ESTE PROGRAMA APENAS GERA O PROMPT.
+    </footer>
+</div>
+<script>
+    const firebaseConfig = { databaseURL: "https://promptv25-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+    const BASE_URL = "https://cassiakelly995-lab.github.io/meu-app/v25.html";
+    const FIXOS = ["Helen_cristina"];
+
+    function showMsg(txt, cor) {
+        const el = document.getElementById('msg');
+        el.style.color = cor || '#52c452';
+        el.innerText = txt;
+        setTimeout(() => el.innerText = '', 2500);
+    }
+
+    function renderizar(acessos) {
+        const lista = document.getElementById('listaAcessos');
+        const total = document.getElementById('total');
+        lista.innerHTML = '';
+        const keys = Object.keys(acessos || {});
+        keys.forEach(id => {
+            const acc = acessos[id];
+            const ehFixo = FIXOS.includes(id);
+            lista.innerHTML += `
+                <div class="item">
+                    <span class="item-nome">${acc.nome}</span>
+                    ${ehFixo ? '<span class="status-fixo">FIXO</span>' : '<span class="status-ok">ATIVO</span>'}
+                    ${ehFixo ? '' : `<button class="btn-revogar" onclick="revogar('${id}', '${acc.nome}')">REVOGAR</button>`}
+                    <div class="item-id">ID: ${id}</div>
+                    <button class="btn-copiar" onclick="copiar('${id}')">📋 COPIAR LINK</button>
+                </div>`;
+        });
+        total.innerText = `ACESSOS ATIVOS: ${keys.length}`;
+    }
+
+    db.ref('acessos_v9').on('value', snap => {
+        const dados = snap.val() || {};
+        if (!dados['Helen_cristina']) {
+            db.ref('acessos_v9/Helen_cristina').set({ nome: 'HELEN CRISTINA', criadoEm: Date.now() });
         }
-        function copiarLink() {
-            const link = document.getElementById('linkOficial').innerText.trim();
-            navigator.clipboard.writeText(link).then(() => alert("🚀 Link copiado!"));
+        renderizar(dados);
+    });
+
+    function gerarAcesso() {
+        const nome = document.getElementById('nomeDoutora').value.trim().toUpperCase();
+        if (!nome) { showMsg('DIGITE O NOME!', '#ff4d4d'); return; }
+        const id = btoa(nome + Date.now()).replace(/[^a-zA-Z0-9]/g,'').substring(0, 10);
+        db.ref('acessos_v9/' + id).set({ nome, criadoEm: Date.now() })
+            .then(() => {
+                document.getElementById('nomeDoutora').value = '';
+                showMsg('ACESSO GERADO COM SUCESSO!');
+            });
+    }
+
+    function revogar(id, nome) {
+        if (confirm(`Revogar acesso de ${nome}? Ela será bloqueada imediatamente.`)) {
+            db.ref('acessos_v9/' + id).remove()
+                .then(() => showMsg('ACESSO REVOGADO!', '#ff4d4d'));
         }
-    </script>
+    }
+
+    function copiar(id) {
+        const link = BASE_URL + '?id=' + id;
+        if (navigator.clipboard && navigator.clipboard.writeText) {
+            navigator.clipboard.writeText(link).then(() => showMsg('LINK COPIADO!'));
+        } else {
+            const el = document.createElement('textarea');
+            el.value = link;
+            document.body.appendChild(el);
+            el.select();
+            document.execCommand('copy');
+            document.body.removeChild(el);
+            showMsg('LINK COPIADO!');
+        }
+    }
+</script>
 </body>
 </html>
